# test_Qwen0.6B

./: main.py  pyproject.toml
